--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>homework-base</module>
+        <module>homework-sazikov-andrey</module>
     </modules>
 
     <build>
